<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailActivity"
    android:orientation="horizontal"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="293dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardBackgroundColor="#9C27B0"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/detail_avatar"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:scaleType="centerCrop"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="4dp"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/detail_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:typeface="serif"
                    tools:text="@string/username" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detail_company"
                        style="@style/TextContent2"
                        android:text="@string/company"
                        tools:paddingEnd="20dp" />

                    <TextView
                        android:id="@+id/detail_location"
                        style="@style/TextContent2"
                        tools:text="@string/location" />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="@string/name" />

    </LinearLayout>

    <TextView
        style="@style/TextContent"
        android:text="@string/following" />

    <LinearLayout
        style="@style/TextField1"
        android:layout_width="290dp"
        android:layout_height="100dp">

        <LinearLayout
            style="@style/TextField2"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#9C27B0"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/detail_followers"
        style="@style/TextContent"
        android:layout_width="240dp"
        android:layout_height="90dp"
        tools:text="@string/value" />

    <TextView
        android:id="@+id/detail_following"
        style="@style/TextContent"
        tools:text="@string/value" />

    <TextView
        android:id="@+id/detail_repository"
        style="@style/TextContent"
        android:layout_height="wrap_content"
        tools:text="@string/value" />

    <LinearLayout
        style="@style/TextField2"
        android:layout_marginEnd="10dp">

        <TextView
            style="@style/TextContent"
            android:text="@string/repository" />

    </LinearLayout>

    <LinearLayout
        style="@style/TextField2"
        android:layout_marginEnd="10dp">

        <TextView
            style="@style/TextContent"
            android:text="@string/followers" />

    </LinearLayout>
</LinearLayout>